# XPOS

./: .gitignore  README.md  pyproject.toml  setup.py
alphax_pos_suite/: hooks.py  patches.txt
alphax_pos_suite/alphax_pos_suite/: api.py  install.py  patches.txt
alphax_pos_suite/alphax_pos_suite/data/: custom_fields_seed.json
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_card_transaction/: alphax_pos_card_transaction.json
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_day_close/: alphax_pos_day_close.json
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_day_close_payment/: alphax_pos_day_close_payment.json
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_denomination_line/: alphax_pos_denomination_line.json
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_email_log/: alphax_pos_email_log.json
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_email_recipient/: alphax_pos_email_recipient.json
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_kb_article/: alphax_pos_kb_article.json
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_kds_ticket/: alphax_pos_kds_ticket.json  alphax_pos_kds_ticket.py
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_order/: alphax_pos_order.json  alphax_pos_order.py
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_outlet/: alphax_pos_outlet.json
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_payment_terminal_settings/: alphax_pos_payment_terminal_settings.json
alphax_pos_suite/alphax_pos_suite/doctype/alphax_pos_profile/: alphax_pos_profile.json
(+8 files in other folders)
